Nudge the patches page a little wider to avoid wrapping.

--- a/patches.css
+++ b/patches.css
@@ -5,7 +5,7 @@
 
 	background: white;
 
-	width: 640px;
+	width: 660px;
 
 	/* Oh CSS. */
 	margin-left: -361px;
@@ -32,7 +32,7 @@
 	/* Oh CSS. */
 	margin-left: -29px;
 
-	width: 700px;
+	width: 720px;
 }
 
 .content-patches td {
